[package]
name = "turing-channels"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
tinyrlibc = "0.2.1"
embassy = { git = "https://github.com/embassy-rs/embassy.git", features = [] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "nrf9160-ns", "unstable-pac", "time-driver-rtc1"]  }

heapless = "0.7.13"

lock_api = "0.4.7"
futures-intrusive = { version = "0.4.0", default-features = false }

# cargo build/run --release
[profile.release]
debug = true
lto = true
